--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,6 @@
   "description": "Mern Demo",
   "private": true,
   "proxy": "http://localhost:3001/",
-  "homepage": "https://gelissa.github.io/googleBookSearch",
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
@@ -14,17 +13,12 @@
     "start": "node server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-"dev-dependencies": {
-  "gh-pages": "^2.1.1"
-}
+  ]
 }
