--- a/client/package.json
+++ b/client/package.json
@@ -5,12 +5,13 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
-    "react": "^16.6.3",
+    "react": "^16.11.0",
     "react-dom": "^16.6.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^2.1.1"
   },
   "scripts": {
-    "start": "node server/server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
