--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "if-env": "^1.0.4",
+    "mini-create-react-context": "^0.3.2",
     "mongoose": "^5.7.8",
+    "react": "^16.11.0",
     "react-router-dom": "^5.1.2"
   }
 }
